# anomaly_detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/synthetic/: anchors_train.csv  anchors_valid.csv  negatives_test.csv  negatives_train.csv  negatives_train_0.csv  negatives_train_1.csv  negatives_train_3.csv  negatives_train_easy.csv  negatives_train_extreme.csv  negatives_train_hard.csv  negatives_train_medium.csv  negatives_valid.csv  positives_test.csv  positives_train.csv  positives_valid.csv  trial.csv
src/: detector.py  explanation.py  main.py
src/cnn_siamese/: model.py
src/common/: constants.py  state.py  training_functions.py  visualizations.py
src/data_generator/: log_generator.py
src/datasets/: synthetic.py
