[project]
name = "anomaly-detection"
version = "0.1.0"
description = "anomaly detection using NN"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "pandas>=3.0.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
anomaly-detection = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "anomaly-detection",
]
